--- a/style.css
+++ b/style.css
@@ -16,12 +16,15 @@ h1 {
     transform: translateX(-50%);
     padding: 0.25%;
     white-space: nowrap;
+    font-family: 'Courier New', Courier, monospace;
 }
 
 p {
     color: whitesmoke;
     margin-left: 10%;
     margin-right: 10%;
+    text-align: center;
+    font-family: 'Courier New', Courier, monospace;
 }
 
 hr {
@@ -35,6 +38,7 @@ li {
     margin-left: 50%;
     transform: translateX(-50%);
     color: whitesmoke;
+    font-family: 'Courier New', Courier, monospace;
 }
 
 /* ul {
@@ -47,6 +51,7 @@ a {
 
 .quote {
     text-align: center;
+    font-family: 'Courier New', Courier, monospace;
 }
 
 div {
@@ -68,4 +73,5 @@ div {
     text-align: center;
     margin: 4% 8% 0 8%;
     padding: 1%;
+    font-family: 'Courier New', Courier, monospace;
 }
