--- a/style.css
+++ b/style.css
@@ -8,6 +8,30 @@ img {
     margin: 1.5% auto 0 auto;
 }
 
+.update {
+    display: block;
+    width: 55%;
+    margin: 2% auto 2% auto;
+}
+
+.list {
+    display: block;
+    width: 40%;
+    margin: 2% auto 2% auto;
+}
+
+.list_narrow {
+    display: block;
+    width: 13%;
+    margin: 2% auto 2% auto;
+}
+
+.list_wide {
+    display: block;
+    width: 60%;
+    margin: 2% auto 2% auto;
+}
+
 h1 {
     color: black;
     background-color: white;
@@ -18,6 +42,7 @@ h1 {
     white-space: nowrap;
     font-family: 'Courier New', Courier, monospace;
 }
+
 
 p {
     color: whitesmoke;
@@ -46,7 +71,15 @@ li {
 } */
 
 a {
-    color: whitesmoke;
+    background-color: white;
+    display: block;
+    /* margin-left: 50%;
+    transform: translateX(-50%); */
+    font-size: 2em;
+    text-align: center;
+    margin: 1% 8% 0 8%;
+    padding: 1%;
+    font-family: 'Courier New', Courier, monospace;
 }
 
 .quote {
@@ -56,7 +89,7 @@ a {
 
 div {
     display: block;
-    margin: 5% auto 0 auto;
+    margin: 1% auto 1% auto;
     color: whitesmoke;
     width: 70%;
     border: 10px dotted;
@@ -74,4 +107,17 @@ div {
     margin: 4% 8% 0 8%;
     padding: 1%;
     font-family: 'Courier New', Courier, monospace;
+}
+
+.section {
+    background-color: white;
+    display: block;
+    /* margin-left: 50%;
+    transform: translateX(-50%); */
+    padding: 0;
+    font-size: 4em;
+    text-align: center;
+    margin: 0 14.5% 0 14.5%;
+    padding: 1%;
+    font-family: 'Courier New', Courier, monospace; 
 }
