--- a/style.css
+++ b/style.css
@@ -53,6 +53,7 @@ p {
     margin-right: 10%;
     text-align: center;
     font-family: 'Courier New', Courier, monospace;
+    text-align: justify;
 }
 
 hr {
